--- a/sherlockProject.Rmd
+++ b/sherlockProject.Rmd
@@ -36,7 +36,7 @@ devtools::install_github("analyxcompany/resolution")
 
 # Introduction 
 
-Sir Arthur Ignatius Conan Doyle (22 May 1859 – 7 July 1930) was a British writer and physician. He created the character Sherlock Holmes in 1887 for A Study in Scarlet, the first of four novels and fifty-six short stories about Holmes and Dr. Watson. The Sherlock Holmes stories are milestones in the field of crime fiction.
+Sir **Arthur Ignatius Conan Doyle** (22 May 1859 – 7 July 1930) was a British writer and physician. He created the character **Sherlock Holmes** in 1887 for A Study in Scarlet, the first of four novels and fifty-six short stories about Holmes and Dr. Watson. The Sherlock Holmes stories are milestones in the field of crime fiction.
 
 Referring to himself as a "consulting detective" in the stories, Holmes is known for his proficiency with observation, deduction, forensic science, and logical reasoning that borders on the fantastic, which he employs when investigating cases for a wide variety of clients, including Scotland Yard.
 
@@ -44,15 +44,15 @@ The character and stories have had a profound and lasting effect on mystery writ
 
 In this presentation we will analyze the four novels with techniques of text mining to obtain information on the language used, how homogeneous it is, and how it is classified through the sentiment analysis.
 
-<h4> Short summary of the novels: </h4>
+### Short summary of the novels: 
 
-*A Study in Scarlet*. The story marks the first appearance of Sherlock Holmes and Dr. Watson, who would become the most famous detective duo in literature. The book's title derives from a speech given by Holmes, a consulting detective, to his friend and chronicler Watson on the nature of his work, in which he describes the story's murder investigation as his "study in scarlet": "There's the scarlet thread of murder running through the colourless skein of life, and our duty is to unravel it, and isolate it, and expose every inch of it."
+**A Study in Scarlet**. The story marks the first appearance of Sherlock Holmes and Dr. Watson, who would become the most famous detective duo in literature. The book's title derives from a speech given by Holmes, a consulting detective, to his friend and chronicler Watson on the nature of his work, in which he describes the story's murder investigation as his "study in scarlet": "There's the scarlet thread of murder running through the colourless skein of life, and our duty is to unravel it, and isolate it, and expose every inch of it."
 
-*The Sign of the Four*. As a dense yellow fog swirls through the streets of London, a deep melancholy has descended on Sherlock Holmes, who sits in a cocaine-induced haze at 221B Baker Street. His mood is only lifted by a visit from a beautiful but distressed young woman - Mary Morstan, whose father vanished ten years before. Four years later she began to receive an exquisite gift every year: a large, lustrous pearl. Now she has had an intriguing invitation to meet her unknown benefactor and urges Holmes and Watson to accompany her. And in the ensuing investigation - which involves a wronged woman, a stolen hoard of Indian treasure, a wooden-legged ruffian, a helpful dog and a love affair - even the jaded Holmes is moved to exclaim, 'Isn't it gorgeous!'
+**The Sign of the Four**. As a dense yellow fog swirls through the streets of London, a deep melancholy has descended on Sherlock Holmes, who sits in a cocaine-induced haze at 221B Baker Street. His mood is only lifted by a visit from a beautiful but distressed young woman - Mary Morstan, whose father vanished ten years before. Four years later she began to receive an exquisite gift every year: a large, lustrous pearl. Now she has had an intriguing invitation to meet her unknown benefactor and urges Holmes and Watson to accompany her. And in the ensuing investigation - which involves a wronged woman, a stolen hoard of Indian treasure, a wooden-legged ruffian, a helpful dog and a love affair - even the jaded Holmes is moved to exclaim, 'Isn't it gorgeous!'
 
-*The Hound of the Baskervilles*. The Hound of the Baskervilles is the third of the four crime novels written by Sir Arthur Conan Doyle featuring the detective Sherlock Holmes. Originally serialised in The Strand Magazine from August 1901 to April 1902, it is set largely on Dartmoor in Devon in England's West Country and tells the story of an attempted murder inspired by the legend of a fearsome, diabolical hound of supernatural origin. Sherlock Holmes and his companion Dr. Watson investigate the case. This was the first appearance of Holmes since his apparent death in "The Final Problem", and the success of The Hound of the Baskervilles led to the character's eventual revival.
+**The Hound of the Baskervilles**. The Hound of the Baskervilles is the third of the four crime novels written by Sir Arthur Conan Doyle featuring the detective Sherlock Holmes. Originally serialised in The Strand Magazine from August 1901 to April 1902, it is set largely on Dartmoor in Devon in England's West Country and tells the story of an attempted murder inspired by the legend of a fearsome, diabolical hound of supernatural origin. Sherlock Holmes and his companion Dr. Watson investigate the case. This was the first appearance of Holmes since his apparent death in "The Final Problem", and the success of The Hound of the Baskervilles led to the character's eventual revival.
 
-*The Valley of Fear*. Doyle's final novel featuring the beloved sleuth, Sherlock Holmes, brings the detective and his friend to a country manor where they are preceded by either a murder or a suicide. A card with the initials VV 341 has been left by the body, and discovering the facts of the case gets ever more difficult. The answers to this mystery lie far away from the scene of the crime and across the Atlantic, in a place known as ‘The Valley of Fear’. A secretive organization lies culprit and an infiltration of it is in order.
+**The Valley of Fear**. Doyle's final novel featuring the beloved sleuth, Sherlock Holmes, brings the detective and his friend to a country manor where they are preceded by either a murder or a suicide. A card with the initials VV 341 has been left by the body, and discovering the facts of the case gets ever more difficult. The answers to this mystery lie far away from the scene of the crime and across the Atlantic, in a place known as ‘The Valley of Fear’. A secretive organization lies culprit and an infiltration of it is in order.
 
 
 ```{r prepare novels, include=FALSE}
@@ -121,7 +121,7 @@ novels_raw <- houn %>%
 # Text mining
 
 ### Frequency analysis with wordcloud 
-This is a wordcloud, a collection, or cluster, of words depicted in different sizes. The biggest and boldest the word appears, the more often it's mentioned within a given text. As you can see the biggest words are "Holmes", the name of the main character, "sir" a prefix used in the Victorian era when someone refereed to another man. Finally "house", "time", "hand", "eyes", "night" that are important words related with murders, the house refers to the murdered one or the Holmes one, the time of when it happened, the hand is what holds murder weapon, the eyes of witness, and the night is the time of the day when most of the murders happens.
+This is a **wordcloud**, a collection, or cluster, of words depicted in different sizes. The biggest and boldest the word appears, the more often it's mentioned within a given text. As you can see the biggest words are "Holmes", the name of the main character, "sir" a prefix used in the Victorian era when someone refereed to another man. Finally "house", "time", "hand", "eyes", "night" that are important words related with murders, the house refers to the murdered one or the Holmes one, the time of when it happened, the hand is what holds murder weapon, the eyes of witness, and the night is the time of the day when most of the murders happens.
 
 ```{r wordcloud_words, echo=FALSE, collapse=TRUE, warning=FALSE}
 
@@ -136,7 +136,7 @@ wordcloud(words = words_frequencies$word, freq = words_frequencies$n, min.freq =
 
 ### Bigram Frequency
 
-In this case I consider bigrams. This is a plot which each point corrispondes to a bigram (you can check which of them hovering with mouse). It is interesting that the bigram "Sherlock Holmes" occurrences decline over the novels, from 50 times in the first book to only 11 in the last one. What we can observe is that the bigrams with a significant number of occurrences are names such as "Sir Charles" or "Miss Mortsan". The dashed line is the boundary between the top 10 bigrams and the others.
+In this case I consider bigrams. This is a plot which each point corresponds to a bigram (you can check which of them hovering with mouse). It is interesting that the bigram "Sherlock Holmes" occurrences decline over the novels, from 50 times in the first book to only 11 in the last one. What we can observe is that the bigrams with a significant number of occurrences are *names* such as "Sir Charles" or "Miss Mortsan". The dashed line is the boundary between the top 10 bigrams and the others.
 
 ```{r most used bigrams, echo=FALSE, include=FALSE, collapse=TRUE, warning=FALSE}
 
@@ -192,14 +192,15 @@ ggplotly(p, tooltip = c("text")) %>%
 
 ```
 
-<h4> Bigrams as a network </h4>
-We may be interested in visualizing all of the relationships among words simultaneously, rather than just the top few divided by book. We can arrange the words into a network, or “graph”.
+### Bigrams as a network
+
+We may be interested in visualizing all of the relationships among words simultaneously, rather than just the top few divided by book. We can arrange the words into a **network**, or “graph”.
 
 - from: the first word of the bigram
 - to: the second word of the bigram
-- color of the arrow: The number of times the bigram occurs (more times more opaque)
+- color of the arrow: the number of times the bigram occurs (more times more opaque)
 
-I exuded the brigrams that occurred less than 9 times to exmine only the important ones, for the most part like before we can see name of characters and places, occasionally we can see some objects such as the "wedding ring" in The Valley of Fear.
+I exuded the brigrams that occurred less than 9 times to exmine only the important ones, for the most part like before we can see name of *characters* and *places*, occasionally we can see some *objects* such as the "wedding ring" in The Valley of Fear.
 
 
 ```{r bigram as a network, echo=FALSE, collapse=TRUE, warning=FALSE, fig.width=7, fig.height=5 }
@@ -225,8 +226,8 @@ ggraph(bigram_graph, layout = "fr") +
 
 ### tf-idf  
 
-What are the highest tf-idf words in these four novels? The statistic tf-idf identifies words that are important to a document in a collection of documents; in this case, we’ll see which words are important in one of the novels compared to the others.
-What measuring tf-idf has done here is show us that Arthur Conan Doyle used similar language across hir four novels, and what distinguishes one novel from the rest within the collection of his works are the proper nouns, the names of people and places.
+What are the highest *tf-idf* words in these four novels? The statistic tf-idf identifies *words that are important to a document in a collection of documents*; in this case, we’ll see which words are important in one of the novels compared to the others.
+What measuring tf-idf has done here is show us that Arthur Conan Doyle used **similar language** across hir four novels, and what distinguishes one novel from the rest within the collection of his works are the proper nouns, the names of people and places.
 
 
 ```{r tf_idf_unigram, echo=FALSE, include=FALSE,collapse=TRUE, warning=FALSE}
@@ -281,7 +282,7 @@ book_tf_idf %>%
 
 ### Sentiment anlysis on the four novels
 
-Which are the main sentiments in the books? Of course these are detective novels so I expect that the <span style="color: #F9776D;">negative</span> sentiments are the most present, since they talk about murders and mysteries. I use the sum of the occurrences of the words for each sentiment in order to highlight that. I use colors to highlight <span style="color: #F9776D;">negative</span> and <span style="color: #01BfC5;">positive</span> sentiments. As we expect all the novels have a lot of <span style="color: #F9776D;">negative</span> words, we could say that only 1/3 of the words are <span style="color: #01BfC5;">positive</span> We will use the BING sentiment lexicon.
+Which are the **main sentiments** in the books? Of course these are detective novels so I expect that the <span style="color: #F9776D;">negative</span> sentiments are the most present, since they talk about murders and mysteries. I use the sum of the occurrences of the words for each sentiment in order to highlight that. I use colors to highlight <span style="color: #F9776D;">negative</span> and <span style="color: #01BfC5;">positive</span> sentiments. As we expect all the novels have a lot of <span style="color: #F9776D;">negative</span> words, we could say that only 1/3 of the words are <span style="color: #01BfC5;">positive</span> We will use the BING sentiment lexicon.
 
 
 ```{r sentiment_general_analysis, echo=FALSE,include=FALSE, collapse=TRUE, warning=FALSE}
@@ -360,7 +361,7 @@ top_sentiment_words %>%
 
 ### False friends
 
-It is not strange that there is the possibility of *false friends* meaning a <span style="color: #01BfC5;">positive</span> or <span style="color: #F9776D;">negative</span> word preceded by a negation, this would change the word to the opposite meaning. For that reason I decided to explore all the bigrams with "not" as the first word and then I calculated the contribution of each word by doing the product between his sentiment value and the number of occurrences. Lastly I plotted the top 20 word preceded by not based on their absolute contribution. 
+It is not strange that there is the possibility of **false friends** meaning a <span style="color: #01BfC5;">positive</span> or <span style="color: #F9776D;">negative</span> word preceded by a negation, this would change the word to the opposite meaning. For that reason I decided to explore all the bigrams with **not** as the first word and then I calculated the contribution of each word by doing the product between his sentiment value and the number of occurrences. Lastly I plotted the top 20 word preceded by not based on their absolute contribution. 
 
 The bigrams “not help” and “not wish” were overwhelmingly the largest causes of misidentification, making the text seem much more <span style="color: #01BfC5;">positive</span> than it is. But we can see phrases like “not fear” and “not ashamed” sometimes suggest text is more <span style="color: #F9776D;">negative</span> than it is.
 
@@ -487,9 +488,9 @@ ggplot(frequency, aes(x = book_words, y = all_words, color = abs(all_words - boo
 
 Tokenizing by n-gram, as we saw previously, is a useful way to explore pairs of adjacent words. However, we may also be interested in words that tend to co-occur within particular documents or particular chapters, even if they don’t occur next to each other.
 
-So we divide the book by sections of 10 row each. Now we want to examine correlation among words, which indicates how often they appear together relative to how often they appear separately. In particular, we’ll focus on the Pearson correlation that it is equivalent to the phi coefficient, a common measure for binary correlation. The focus of the phi coefficient is how much more likely it is that either both word X and Y appear, or neither do, than that one appears without the other. 
+So we divide the book by sections of 10 row each. Now we want to examine **correlation** among words, which indicates how often they appear together relative to how often they appear separately. In particular, we’ll focus on the *Pearson correlation* that it is equivalent to the *phi coefficient*, a common measure for binary correlation. The focus of the phi coefficient is how much more likely it is that either both word X and Y appear, or neither do, than that one appears without the other. 
 
-Let's plot the top 6 word that correlate to *holmes*, *house*, *sir*, and *time*, that are the four most frequent words. 
+Let's plot the top 4 word that correlate to *holmes*, *house*, *sir*, and *time*, that are the four most frequent words. 
 
 ```{r pairwise_prepare, echo=FALSE, include=FALSE, collapse=TRUE, warning=FALSE}
 holmes_section_words <- novels_raw %>%
@@ -601,5 +602,5 @@ ggplot(td_gamma, aes(gamma, fill = as.factor(topic))) +
 
 # Conclusions
 
-This analysis proves that through data science we are able to extract all the information necessary to understand a text in a sufficiently precise way and find out its secrets. Starting from simple text mining techniques we analyzed the word frequency and the most related words in order to have a shallow idea of the topics of the book. We then explored the sentiment of each book and we understand that you have to look at group of words and the relations between them to truly extract the true information behind the characters. Finally, we studied more deeply the book with topic modeling in order to better understand the topic of the texts. 
+This analysis proves that through data science we are able to extract all the information necessary to understand a text in a sufficiently precise way and find out its *secrets*. Starting from simple text mining techniques we analyzed the word frequency and the most related words in order to have a shallow idea of the topics of the book. We then explored the sentiment of each book and we understand that you have to look at group of words and the *relations* between them to truly extract the true information behind the characters. Finally, we studied more deeply the book with topic modeling in order to better understand the topic of the texts. 
 
